# Corporate-Simulator

./: REFACTOR_BLUEPRINT.md  corporate_simulator_project V1.0.txt  jules_refactor_prompt.txt  refactor_prompt.txt  run_refactor.bat  unpack.py
old_codebase/: .env  README.md  extract_remaining_prompts.py  game_state.py  main.py  model_config.py  pyproject.toml  run_all_phase3_tests.bat  run_game.bat  test_balance_changes.py  test_bonus_engine.py  test_council_meeting.py  test_council_metrics.py  test_crisis_mechanical_consequences.py  test_crisis_parsing.py  test_event_lifecycle.py  test_faction_consequences.py  test_faction_goal_simulation.py  test_faction_integration.py  test_first_turn_briefing.py  test_historical_mode.py  test_image_updates.py  test_inner_circle_generation.py  test_state_validation.py  test_succession_crisis.py  test_systems.py  test_validation.py  test_visual_system.py  test_world_turn_updates.py  test_world_turns_integration.py  world_generator.py
old_codebase/.claude/: settings.local.json
old_codebase/context/: buildings.json  civilization_state.json  culture.json  factions.json  game_metadata.json  history_compressed.json  inner_circle.json  religion.json  technology.json  world_context.json
old_codebase/data/: building_types.json  tech_tree.json
old_codebase/docs/: bonus_system.md
old_codebase/engines/: action_processor.py  bonus_definitions.py  bonus_engine.py  building_event_engine.py  building_manager.py  callback_engine.py  character_engine.py  consequence_engine.py  context_builder.py  council_engine.py  crisis_engine.py  (+20 more)
(+81 files in other folders)
